# offline-chess-puzzles

./: .env  .gitignore  Cargo.toml  LICENSE  README-mac.md  README.md  compiling.md  mac-app.sh  ocp.db  settings.json
.cargo/: config
.github/workflows/: build.yml
cburnett/: license.txt
font/: Alpha.doc  Alpha.wri
merida/: info.txt
migrations/2023-05-11-035750_create_favs/: down.sql  up.sql
pieces/cburnett/: license.txt
puzzles/: info.txt
src/: config.rs  db.rs  download_db.rs  eval.rs  export.rs  lang.rs  main.rs  models.rs  openings.rs  puzzles.rs  schema.rs  search_tab.rs  settings.rs  styles.rs
translations/cn/: ocp.ftl
translations/en-US/: ocp.ftl
translations/es/: ocp.ftl
translations/fr/: ocp.ftl
translations/nl/: ocp.ftl
translations/pt-BR/: ocp.ftl
