[package]
name = "offline-chess-puzzles"
version = "2.4.1"
authors = ["brianch <brianch@users.noreply.github.com>"]
edition = "2021"

[dependencies]
#iced = {version = "0.10.0", features = ["svg", "tokio", "lazy"] }
#iced_aw = {version = "0.7.0", default-features = false, features = ["tabs"] }
iced = { version = "0.14", default-features = false, features = ["svg", "tokio", "lazy", "advanced", "advanced-shaping"] }
iced_aw = { version = "0.13", default-features = false, features = ["tabs"] }
iced_drop = {git = "https://github.com/pml68/iced_drop.git", branch="0.14"}

rand = "0.9.2"
chrono = "0.4.42"
chess = "3.2.0"
csv = "1.4.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["process", "io-std", "io-util", "sync"] }
reqwest = "0.13.1"
zstd = "0.13.3"
rodio = { version = "0.21.1",  default-features = false, features = ["playback", "symphonia-all"] }
fluent-bundle = "0.16.0"
intl-memoizer = "0.5.3"
once_cell = "1.21.3"
unic-langid = { version = "0.9.6", features = ["macros"] }
diesel = { version = "2.3.5", features = ["sqlite"] }
dotenvy = "0.15.7"
lopdf = "0.38.0"
open = "5.3.3"
#rfd = { version = "0.13.0", default-features = false, features = ["xdg-portal", "tokio"] }
rfd = "0.17.1"
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
